# AlgoVista-

./: .gitignore  AlgoVista-SUMMARY.md  README.md
backend/: README.md  main.py  requirements.txt  start_server.py
backend_cpp/: CMakeLists.txt
backend_cpp/src/: main.cpp
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  styles.css
frontend/src/components/: Background3D.jsx
